ground/openpilotgcs/src/plugins/serialconnection/serialplugin.h
@@ -106,6 +106,8 @@ private:
     SerialPluginConfiguration *m_config;
     SerialPluginOptionsPage *m_optionspage;
 
+    QList<QSerialPortInfo> availablePorts();
+
 protected slots:
     void onEnumerationChanged();
 
